# fastapi_basic

./: Dockerfile  README.md
app/: main.py  pyproject.toml
