[tool.poetry]
name = "fastapi_app"
package-mode = false
version = "0.1.0"
description = ""
authors = ["timofein"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
black = "^25.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
